feat: add file management API routes and libs
Recreate all original Express routes as Next.js API routes:
- POST /api/upload (multipart file upload with validation)
- GET/DELETE /api/files (list and delete files)
- GET /api/files/[folder]/[name] (file info)
- PATCH /api/files/visibility (toggle private/public)
- GET /api/stats (storage statistics)
- GET /api/download/[folder]/[name] (file download)
- GET /api/preview/[folder]/[name] (file preview/serve)
- GET /api/health (health check)
- GET /api/config/allowed-types (MIME type config)

Add supporting libs: slug helper, metadata service, MIME lookup,
upload config, directory bootstrap, session requirement helper.

--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,8 @@ next-env.d.ts
 .vscode/
 .idea/
 
-# uploads
-upload/
+# uploads (root-level only, not app/api/upload/)
+/upload/
+
+# database
+*.db
